force-app/main/default/objects/FileDownloadLog__c/FileDownloadLog__c.object-meta.xml
<CustomObject>
    <label>File Download Log</label>
    <nameField>
        <displayFormat>FDL-{0000}</displayFormat>
        <label>File Download Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Download Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>