force-app/main/default/objects/FileDownloadLog__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Datei Downloads</relationshipLabel>
    <relationshipName>FileDownloads</relationshipName>
    <type>Lookup</type>
</CustomField>