force-app/main/default/objects/FileDownloadLog__c/fields/ImmobilienDMSDatei__c.field-meta.xml
<CustomField>
    <fullName>ImmobilienDMSDatei__c</fullName>
    <label>Immobilien DMS Datei</label>
    <referenceTo>ImmobilienDmsDatei__c</referenceTo>
    <relationshipLabel>File Download Logs</relationshipLabel>
    <relationshipName>File_Download_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>