force-app/main/default/objects/FileDownloadLog__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Immobilie</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Datei Downloads</relationshipLabel>
    <relationshipName>FileDownloads</relationshipName>
    <type>Lookup</type>
</CustomField>